--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-service.name=ServiceA
-response.delay=3000
+service.name=DefaultService
+response.delay=30
 
 logging.level.org.springframework.web=INFO
 logging.level.example.l5d.helloservice=DEBUG
