--- a/build.gradle
+++ b/build.gradle
@@ -31,7 +31,14 @@ jar {
     baseName = 'linkerd-demo'
 }
 
+docker {
+	registry = 'localhost:5000'
+}
+
 task buildDocker(type: Docker, dependsOn: build) {
+	tag = 'localhost:5000/l5ddemo'	
+	push = true
+	
 }
 
 dependencies {
