--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,23 @@
+import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+
 buildscript {
 	ext {
 		springBootVersion = '1.5.3.RELEASE'
 	}
 	repositories {
 		mavenCentral()
+		jcenter()
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath('se.transmode.gradle:gradle-docker:1.2')
+		classpath 'com.bmuschko:gradle-docker-plugin:3.0.6'
 	}
 }
 
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'docker'
+apply plugin: 'com.bmuschko.docker-remote-api'
 
 version = '1.0'
 sourceCompatibility = 1.8
@@ -29,16 +32,16 @@ bootRun {
 
 jar {
     baseName = 'linkerd-demo'
+	archiveName = 'linkerd-demo.jar'
 }
 
 docker {
-	registry = 'localhost:5000'
+	//url = 'http://10.29.161.109:31441/v2'
 }
 
-task buildDocker(type: Docker, dependsOn: build) {
-	tag = 'localhost:5000/l5ddemo'	
-	push = true
-	
+task buildImage(type: DockerBuildImage, dependsOn: build) {
+    tag = 'horzsolt/l5ddemo'
+	inputDir = file('d:\\work\\l5ddemo')
 }
 
 dependencies {
