--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,18 @@
 import com.bmuschko.gradle.docker.tasks.image.DockerBuildImage
+import com.bmuschko.gradle.docker.tasks.image.Dockerfile
 
 buildscript {
-	ext {
-		springBootVersion = '1.5.3.RELEASE'
-	}
-	repositories {
-		mavenCentral()
-		jcenter()
-	}
-	dependencies {
-		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath 'com.bmuschko:gradle-docker-plugin:3.0.6'
-	}
+    ext {
+        springBootVersion = '1.5.3.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath 'com.bmuschko:gradle-docker-plugin:3.0.6'
+    }
 }
 
 apply plugin: 'java'
@@ -19,43 +20,51 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'com.bmuschko.docker-remote-api'
 
+ext {
+    dockerPath = "${project.buildDir}/docker"
+}
+
 version = '1.0'
 sourceCompatibility = 1.8
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 bootRun {
     addResources = true
 }
 
-jar {
-    baseName = 'linkerd-demo'
-	archiveName = 'linkerd-demo.jar'
-}
-
 docker {
-	//url = 'http://10.29.161.109:31441/v2'
-    javaApplication {
-        baseImage = 'frolvlad/alpine-oraclejdk8:slim'
-        maintainer = 'horzsolt "horzsolt2006@gmail.com"'
-        ports = [8080,8080]
-        tag = 'horzsolt/l5ddemo'
-    }
-
+    url = project.properties.getOrDefault('dockerUrl', System.env.DOCKER_HOST)
+    certPath = new File(project.properties.getOrDefault('certPath', System.env.DOCKER_CERT_PATH))
 }
 
-task buildImage(type: DockerBuildImage, dependsOn: build) {
+task prepareArchiveForDockerBuild(type: Copy) {
+    from "${project.jar.archivePath}"
+    into "$dockerPath"
+}
+
+task createDockerfile(type: Dockerfile,  dependsOn: [build, 'prepareArchiveForDockerBuild']) {
+    destFile = project.file("$dockerPath/Dockerfile")
+
+    from 'frolvlad/alpine-oraclejdk8:slim'
+    volume '/tmp'
+    addFile "${project.jar.archiveName}", 'app.jar'
+    runCommand "sh -c 'touch /app.jar'"
+//    environmentVariable 'JAVA_OPTS', " "
+    entryPoint  "sh", "-c", 'java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app.jar'
+}
+
+task buildImage(type: DockerBuildImage, dependsOn: 'createDockerfile') {
     tag = 'horzsolt/l5ddemo'
-	inputDir = projectDir
-	dockerFile = project.file('Dockerfile')	
+    inputDir = createDockerfile.destFile.parentFile
 }
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.springframework.boot:spring-boot-devtools')
-	testCompile('org.springframework.boot:spring-boot-starter-test')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-web')
+    compile('org.springframework.boot:spring-boot-devtools')
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 }
