--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,13 @@ bootRun {
 docker {
     url = project.properties.getOrDefault('dockerUrl', System.env.DOCKER_HOST)
     certPath = new File(project.properties.getOrDefault('certPath', System.env.DOCKER_CERT_PATH))
+	
+    registryCredentials {
+        url = DockerRegistryCredentials.DEFAULT_URL
+		username = "horzsolt"
+		password = "l5ddemo"
+		email = "horzsolt2006@gmail.com"
+    }	
 }
 
 task prepareArchiveForDockerBuild(type: Copy) {
@@ -65,13 +72,7 @@ task buildImage(type: DockerBuildImage, dependsOn: 'createDockerfile') {
 
 
 task pushImage(type: DockerPushImage, dependsOn: 'buildImage') {
-	imageName = 'hub.docker.com/horzsolt/l5ddemo'
-    /*registryCredentials = new DockerRegistryCredentials(
-        url = 'https://hub.docker.com/r/horzsolt/l5ddemo/'
-		username = "horzsolt"
-		password = "l5ddemo"
-		email = "horzsolt2006@gmail.com"
-    )*/
+	imageName = 'horzsolt/l5ddemo'
 }
 
 dependencies {
