--- a/k8s/service_a.yml
+++ b/k8s/service_a.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: service-a
-  namespace: l5ddemo
+#  namespace: l5ddemo
 spec:
   replicas: 1
   strategy:
@@ -14,12 +14,12 @@ spec:
     spec:
       containers:
       - name: l5ddemo-service
-        image: 10.0.0.11/horzsolt/l5ddemo
+        image: 10.0.0.252/horzsolt/l5ddemo
         env:
         - name: "SERVICE_NAME"
           value: "Service-a"
         - name: "RESPONSE_LATENCY"
-          value: "500"
+          value: "0"
         - name: "POD_IP"
           valueFrom:
             fieldRef:
@@ -33,11 +33,13 @@ spec:
             fieldRef:
               fieldPath: spec.nodeName
         - name: "HTTP_PROXY_IP"
-          value: $(NODE_NAME):4140
+#          value: $(NODE_NAME)
+          value: "192.168.99.100"
         - name: "HTTP_PROXY_PORT"
-          value: $(NODE_NAME):4140
+#          value: "4140"
+          value: "31012"
         - name: "TARGET"
-          value: "service-b.l5ddemo"
+          value: "service-b.default"
         ports:
           - name: web
             containerPort: 8080
@@ -51,19 +53,25 @@ spec:
               path: "/health"
               port: 8080
             initialDelaySeconds: 180
+      - name: kubectl
+        image: buoyantio/kubectl:v1.4.0
+        args:
+        - proxy
+        - "-p"
+        - "8001"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: service-a
-  namespace: l5ddemo
+#  namespace: l5ddemo
   labels:
     app: service-a
 spec:
   type: NodePort
   ports:
     - name: web
-      port: 8080
+      port: 80
       targetPort: web
   selector:
     app: service-a
