--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-devtools')
     compile('com.fasterxml.jackson.core:jackson-databind')
+    compile('org.apache.httpcomponents:httpclient:4.5.3')
+    compile('org.apache.httpcomponents:fluent-hc:4.5.3')
+    compile('org.apache.httpcomponents:httpcore:4.4.7')
     compile("org.projectlombok:lombok")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
