--- a/k8s/service_a.yml
+++ b/k8s/service_a.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: l5ddemo-service
-        image: 10.0.0.252/horzsolt/l5ddemo
+        image: 10.0.0.28/horzsolt/l5ddemo
         env:
         - name: "SERVICE_NAME"
           value: "Service-a"
@@ -32,12 +32,9 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
-        - name: "HTTP_PROXY_IP"
-#          value: $(NODE_NAME)
-          value: "192.168.99.100"
-        - name: "HTTP_PROXY_PORT"
-#          value: "4140"
-          value: "31012"
+#        - name: "HTTP_PROXY"
+##          value: $(NODE_NAME):4140
+#          value: "192.168.99.100:30111"
         - name: "TARGET"
           value: "service-b.default"
         ports:
@@ -53,12 +50,12 @@ spec:
               path: "/health"
               port: 8080
             initialDelaySeconds: 180
-      - name: kubectl
-        image: buoyantio/kubectl:v1.4.0
-        args:
-        - proxy
-        - "-p"
-        - "8001"
+#      - name: kubectl
+#        image: buoyantio/kubectl:v1.4.0
+#        args:
+#        - proxy
+#        - "-p"
+#        - "8001"
 ---
 apiVersion: v1
 kind: Service
