--- a/k8s/service_a.yml
+++ b/k8s/service_a.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: l5ddemo-service
-        image: 10.0.0.28/horzsolt/l5ddemo
+        image: 10.0.0.59/horzsolt/l5ddemo
         env:
         - name: "SERVICE_NAME"
           value: "Service-a"
@@ -31,10 +31,9 @@ spec:
         - name: "HOST_IP"
           valueFrom:
             fieldRef:
-              fieldPath: spec.nodeName
-#        - name: "HTTP_PROXY"
-##          value: $(NODE_NAME):4140
-#          value: "192.168.99.100:30111"
+              fieldPath: status.hostIP
+        - name: "HTTP_PROXY"
+          value: $(NODE_NAME):4140
         - name: "TARGET"
           value: "service-b.default"
         ports:
@@ -50,12 +49,6 @@ spec:
               path: "/health"
               port: 8080
             initialDelaySeconds: 180
-#      - name: kubectl
-#        image: buoyantio/kubectl:v1.4.0
-#        args:
-#        - proxy
-#        - "-p"
-#        - "8001"
 ---
 apiVersion: v1
 kind: Service
